--- a/Tokunaga_Freesia_progress_memo_1.qmd
+++ b/Tokunaga_Freesia_progress_memo_1.qmd
@@ -3,7 +3,7 @@ title: "Progress Memo 1"
 subtitle: |
   | Final Project 
   | Data Science 1 with R (STAT 301-1)
-author: "YOUR NAME"
+author: "Freesia Tokunaga"
 date: today
 
 format:
