--- a/Tokunaga_Freesia_progress_memo_1.qmd
+++ b/Tokunaga_Freesia_progress_memo_1.qmd
@@ -30,22 +30,13 @@ You should make this document your own. This is a template. To help with this we
 ::: {.callout-tip icon=false}
 
 ## Github Repo Link
+[https://github.com/stat301-1-2023-fall/final-project-1-freesiat.git](https://github.com/stat301-1-2023-fall/final-project-1-freesiat.git)
 
-To link to your github **repo**sitory, appropriately edit the example link below. Meaning replace `https://your-github-repo-url` with your github repo url. Suggest verifying the link works before submitting.
-
-[https://your-github-repo-url](https://your-github-repo-url)
-
-:::
-
-::: {.callout-warning}
-GitHub (free account) cannot store large files. If you try to commit and push a large dataset you will have an ERROR! Any file over 100 MB (100,000 KB) needs to be added to the `.gitignore` file BEFORE committing.
-
-**We may need to do that for files in your final project!**
 :::
 
 ## Data source
 
-Blah blah blah^[where blah blah came from, an example of footnote]
+I will be using 3 datasets from gapminder, which contain information about the government health spending as a percentage of the total government spending, government health spending per person in US dollars, and the out of pocket share of total health spending^[https://www.gapminder.org/data/, FREE DATA FROM WORLD BANK VIA GAPMINDER.ORG, CC-BY LICENSE]
 
 ## Why this data
 
