--- a/Tokunaga_Freesia_progress_memo_1.qmd
+++ b/Tokunaga_Freesia_progress_memo_1.qmd
@@ -17,16 +17,6 @@ execute:
 
 from: markdown+emoji 
 ---
-
-::: {.callout-important}
-## Memo format
-
-Like all other submissions for this course, we expect the memo to be neat and well organized.
-
-You should make this document your own. This is a template. To help with this we have added a date to the yaml above (good whenever writing memos). You should remove this block when making this document your own.
-
-:::
-
 ::: {.callout-tip icon=false}
 
 ## Github Repo Link
@@ -36,20 +26,36 @@ You should make this document your own. This is a template. To help with this we
 
 ## Data source
 
-I will be using 3 datasets from gapminder, which contain information about the government health spending as a percentage of the total government spending, government health spending per person in US dollars, and the out of pocket share of total health spending^[https://www.gapminder.org/data/, FREE DATA FROM WORLD BANK VIA GAPMINDER.ORG, CC-BY LICENSE]
+I will be using 3 datasets from gapminder, which contain information about the government health spending as a percentage of the total government spending, government health spending per person in US dollars, the out of pocket share of total health spending across the world, and the infant mortality rate per 1000 births^[https://www.gapminder.org/data/, FREE DATA FROM WORLD BANK VIA GAPMINDER.ORG, CC-BY LICENSE]
 
 ## Why this data
-
-Blah blah blah^[another footnote]
+I chose this data because as a global health major, I am very interested in how governmental financial invenstment into healthcare and financial barriers affect health outcomes for the population. More specifically, I hope to investigate the correlation between infant mortality rate and government health spending, as well as the out-of-pocket healthcare share. Many expecting mothers are unable to seek maternal care throughout their pregnancy due to health costs, resulting in complications during birth or offspring that are unable to survive due to complications that could have been foreseen if the mother could have accessed screening services. Therefore, my initial general hypothesis is that the smaller the government spending and the larger the out of pocket share of healthcare cost, the higher the infant mortality rate.
 
 ## Data quality & complexity check
+```{r}
+library(readr)
+library(tidyverse)
+library(naniar)
 
-Blah blah blah
+gov_spending_percent <- read_csv("data/gov_health_percent.csv")
+miss_var_summary(gov_spending_percent)
+
+gov_spending_per_person <- read_csv("data/gov_spending_person.csv")
+miss_var_summary(gov_spending_per_person)
+
+out_of_pocket_share <- read_csv("data/out_of_pocket_share.csv")
+miss_var_summary(out_of_pocket_share)
+
+infant_mortality_rate <- read_csv("data/infant_mortality_rate.csv")
+miss_var_summary(infant_mortality_rate)
+```
+All the data sets have only numerical variables, except for the initial column which is the country name since each consecutive column after that represents a year.
+There are a handful of missing values for each year for each data set, but it is a small percentage.
+There are 192 observations for 17 variables in the gov spending and gov spending per person data sets, however, there are 206 observations for 217 variables for infant mortality rate.
 
 ## Potential data issues
+Since I will be merging 4 datasets with differing number of variables (years), I will need to select only the variables(years) that the datasets have in common. I will have to use pivot_longer() to create a new column indicating the type of data the numerical value is (e.g. government health spending percentage, infant mortality rate, etc) to differenciate between the columns of each data set, since as of now, they all have the same name (the year). 
 
-Blah blah blah
 
 ## Misc
-
-Blah Blah
+I plan to begin merging the data sets by taking the common years, and then I will begin the EDA by examining the correlation coefficient between the variables by the end of this week. 
